syntax = "proto3";
package Baseledger.baseledger.proof;

import "gogoproto/gogo.proto";
import "proof/params.proto";
import "proof/baseledger_transaction.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/Baseledger/baseledger/x/proof/types";

// GenesisState defines the proof module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated BaseledgerTransaction baseledgerTransactionList = 2 [(gogoproto.nullable) = false];
  uint64 baseledgerTransactionCount = 3;
  // this line is used by starport scaffolding # genesis/proto/state
}
